--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "fisheye",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "npx gulp watch",
-    "compile_sass": "npx gulp buildStyles"
+    "sass": "sass --watch .css/main.scss:.css/main.css"
   },
   "repository": {
     "type": "git",
@@ -23,5 +21,6 @@
     "gulp-autoprefixer": "^8.0.0",
     "gulp-sass": "^5.0.0",
     "sass": "^1.42.1"
-  }
+  },
+  "description": ""
 }
